<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="welcome">Welcome to MyShoe</string>
    <string name="welcome_msg">The best pairs of shoes selected exclusively for you! \nCome in and discover your style</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_msg">Just go ahead, press \"Next\" and discover a world of shoes!</string>



    <string name="next">Next</string>
    <string name="add_shoe">Add a shoe</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_name_hint">Gazelle</string>
    <string name="shoe_company_hint">Adidas</string>
    <string name="shoe_size_hint">11</string>
    <string name="shoe_desc_hint">Awesome shoe!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>

</resources>
